[package]
name = "vulkano-udemy"
version = "0.1.0"
authors = ["Tiago Deliberali <tiago.deliberali@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.19"
image = "0.23"
vulkano-win = "0.19"
winit = "0.22"
